[package]
name = "propfuzz-derive"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.10.2"
proc-macro2 = "1.0.18"
quote = "1.0.7"
syn = { version = "1.0.31", features = ["full"] }

[dev-dependencies]
trybuild = "1"
pretty_assertions = "0.6.1"
propfuzz = { path = "../propfuzz", version = "0.1.0" }
