[package]
name = "propfuzz-macro"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"

[lib]
proc-macro = true
# This is required by cargo readme -- related to https://github.com/livioribeiro/cargo-readme/pull/17.
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"
syn = { version = "1.0.31", features = ["extra-traits", "full"] }

[dev-dependencies]
propfuzz = { path = "../propfuzz" }
