[package]
name = "propfuzz-macro"
version = "0.0.1"
description = "Support macro for propfuzz."
repository = "https://github.com/facebookincubator/propfuzz"
authors = ["Rain <rain1@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true
# This is required by cargo readme -- related to https://github.com/livioribeiro/cargo-readme/pull/17.
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"
syn = { version = "1.0.31", features = ["extra-traits", "full"] }

[dev-dependencies]
propfuzz = { path = "../propfuzz" }
