[package]
name = "propfuzz"
version = "0.0.1"
description = "Combine property-based testing and fuzzing."
repository = "https://github.com/facebookincubator/propfuzz"
authors = ["Rain <rain1@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true

[dependencies]
proptest = "1.0.0"
propfuzz-macro = { path = "../propfuzz-macro", version = "0.0.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
trybuild = "1.0.53"

[features]
default = ["macro"]
macro = ["propfuzz-macro"]

[[test]]
name = "basic"
required-features = ["macro"]

[[test]]
name = "trybuild"
required-features = ["macro"]
